# bongo

./: AUTHORS  CMakeLists.txt  HACKING  INSTALL  Makefile.am  README  TODO  acinclude.m4  autogen.sh  bongo.pc.in  config.h.cmake  configure.ac  doxygen.conf  mdb-removal_progress.pl
import/libical/examples/: Makefile  Makefile.am  usecases.c
import/libical/examples/.deps/: access_components.Po  access_properties_and_parameters.Po  errors.Po  main.Po  parse_text.Po
import/libical/src/libicalcap/: Makefile.am  Makefile.in  client.c  icalcap_utils.c
import/libical/src/libicalvcal/: Makefile.am  Makefile.in  icalvcal.c  vcc.c  vcc.y
import/libical/zoneinfo/: Makefile.am  Makefile.in
import/log4c/log4c/: Makefile.am  Makefile.in  appender.c  appender.h  appender_type_audit.c  appender_type_audit.h  appender_type_mmap.c  appender_type_stream.c  appender_type_stream2.c  appender_type_syslog.c  appender_type_syslog.h  audit_logevent.h  category.c  category.h  defs.h  init.c  init.h  layout.c  layout.h  layout_type_basic.c  layout_type_dated.c  location_info.h  log4c.c  logging_event.c  logging_event.h  priority.c  priority.h  rc.c  rc.h  version.h
import/log4c/sd/: Makefile.am  Makefile.in  defs.h  domnode-xml.c  error.h  factory.c  hash.c  list.c  sprintf.c  sprintf.h  test.c  test.h
import/sqlite3/: Makefile.am  Makefile.in  README.update  configure  configure.ac  manifest  manifest.uuid  sqlite3.pc
import/sqlite3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/agents/director/: CMakeLists.txt  bongodirector.py
src/agents/smtp/: Bongo.rules  CMakeLists.txt  Makefile.in  smtp.h  smtpc.c  smtpc.h  smtpd.c  smtpd.h
src/agents/store/: Bongo.rules  CMakeLists.txt  Makefile.in  NOTES  accounts.c  alarmdb.c  alarmdb.h  auth.c  calendar.c  calendar.h  command-parsing.c  command-parsing.h  command.c  command.h  config.c  contacts.c  contacts.h  conversations.c  conversations.h  cookie.c  create-store.s  create-store.s.cmake  db.c  db.h  dbpool.c  decoding.c  fairlock.c  guid.c  help.h  index.cpp  index.h  lock.c  lock.h  locking.c  lucene-index.cpp  lucene-index.h  mail-parser.c  mail-parser.h  mail.c  mail.h  (+22 more)
src/agents/store/diagrams/: store-sqlite-schema.dot
src/agents/store/filters/: BongoStreamInputStream.h  contact-filter.cpp  event-filter.cpp  file-reader.cpp  file-reader.h  filter.cpp  filter.h  filters.h  mail-filter.cpp  streamio-reader.h
src/agents/store/hacking-docs/: locking-scheme
src/agents/store/sql/: create-cookie-1.s.cmake  create-cookie-1.sql  create-store-1.s.cmake  create-store-1.sql  create-store.s.cmake  create-store.sql
src/agents/store/tests/: Bongo.rules  Makefile.in  checktest.c  conversations_test.c  mail_parser_test.c  mkauthhash.c
src/agents/store/tests/mails/: 1.txt  10.txt  11.txt  12.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
src/apps/config/: Bongo.rules  CMakeLists.txt  config.c  config.h  store.c
src/apps/config/config/: antispam  antivirus  global  imap  mailproxy  manager  pop3  queue  smtp
src/apps/config/config/aliases/: default_config
src/apps/config/hawkeye/: history
src/apps/storetool/: Bongo.rules  CMakeLists.txt  Makefile.in  bongo-storetool.py
src/apps/storetool/bongo/: __init__.py
src/apps/storetool/bongo/storetool/: BackupCommands.py  CalendarCommands.py  ContactCommands.py  ExportMailbox.py  InteractiveCommands.py  MailCommands.py  StoreCommands.py  TestCommands.py
src/apps/storetool/demo/: Bongo.rules  Makefile.in
src/apps/storetool/demo/calendars/: French%20Holidays.ics  World%20Cup%202006.ics  openSUSE.ics
src/apps/storetool/demo/contacts/: list.vcf
src/apps/storetool/demo/mail/: bbq  bongo-general-000  bongo-general-001  bongo-general-002  bongo-general-003  bongo-general-004  bongo-general-005  bongo-general-006  bongo-general-007  bongo-general-008  bongo-general-009  bongo-general-010  bongo-general-011  bongo-general-012  bongo-general-013  bongo-general-014  bongo-general-015  bongo-general-016  desktop-devel-000  desktop-devel-001  desktop-devel-002  desktop-devel-003  desktop-devel-004  desktop-devel-005  desktop-devel-006  desktop-devel-007  desktop-devel-008  desktop-devel-009  desktop-devel-010  desktop-devel-011  desktop-devel-012  desktop-devel-013  desktop-devel-014  desktop-devel-015  desktop-devel-016  desktop-devel-017  desktop-devel-018  desktop-devel-019  desktop-devel-020  desktop-devel-021  (+23 more)
src/libs/cal/: Bongo.rules  CMakeLists.txt  Makefile.in  bongo-cal-instance.c  bongo-cal-object.c  bongo-cal-private.h  bongo-cal-recur.c  bongo-cal-time.c  bongo-cal-timezone.c  bongo-import-tz.c  cal-convert.c
src/libs/cal/tests/: Bongo.rules  Makefile.in  test-cal.c
src/libs/cal/tests/data/: angle.ics  angle.test  bruins.ics  cleveland.ics  cleveland.test  comma.ics  comma.test  labor-day.ics  labor-day.test  lincoln.ics  lincoln.test  presidents-day.ics  presidents-day.test  recur1.ics  recur1.test  recur10.ics  recur10.test  recur11.ics  recur11.test  recur12.ics  recur12.test  recur2.ics  (+19 more)
src/libs/mdb-odbc/: Makefile.am  mdbodbc.c  mdbodbcp.h
src/libs/msgapi/: Bongo.rules  CMakeLists.txt  Makefile.in  cookie.c  msgaddr.c  msgapi.c  msgapip.h  msgauth.c  msgcollector.c  msgdate.c  msghttp.c  msghttp.h  plugin-api.h  sqldb.c
src/libs/msgapi/auth-backends/: CMakeLists.txt  README.odbc  ldap.c  odbc.c  sqlite.c  sqlite.h
src/libs/python/bongo/: Agent.py  Bongo.rules  BongoError.py  CMakeLists.txt  CalCmd.py  Console.py  Contact.py  MDB.py  Makefile.in  Privs.py  StreamIO.py  Template.py  Xpl.py.in  __init__.py  bootstrap.c  bootstrap.h  cal.c  calcmd.c  cmdparse.py  libs.c  mdb.c  msgapi.c  pybongo.c  pybongo.h  streamio.c  table.py
src/libs/python/libbongo/: Bongo.rules  CMakeLists.txt  Makefile.am  bongoutil.c  bootstrap.c  cal.c  calcmd.c  json.c  json.h  libs.c  libs.h  msgapi-defs.c  msgapi-defs.h  msgapi.c  streamio.c  tests.c
src/libs/util/: CMakeLists.txt  array.c  bongoagent.c  bongothreadpool.c  bongoutil.c  logging.c  pools.c  quicksort.c  stringbuilder.c
src/libs/util/tests/: bongokeyword_test.c  stringops_test.c
(+1524 files in other folders)
